@@ -1,4 +1,4 @@
-= jetty-jsp
+= rjack-jetty-jsp
 
 * http://rjack.rubyforge.org
 * http://rubyforge.org/projects/rjack
@@ -11,7 +11,7 @@ jetty[http://rjack.rubyforge.org/jetty/] gem.
 
 == License
 
-=== jetty-jsp ruby gem
+=== rjack-jetty-jsp gem
 
 Copyright (c) 2008-2009 David Kellum
 
