@@ -1,5 +1,5 @@
 #--
-# Copyright (C) 2008 David Kellum
+# Copyright (C) 2008-2009 David Kellum
 #
 # Licensed under the Apache License, Version 2.0 (the "License"); you
 # may not use this file except in compliance with the License.  You
@@ -14,12 +14,16 @@
 # permissions and limitations under the License.
 #++
 
-module JettyJsp
-  JETTY_VERSION = '6.1.20'
-  JSP_VERSION = '2.1'
-  GEM_VERSION = '1'
+module RJack
+  module Jetty
+    module Jsp
+      JETTY_VERSION = '6.1.20'
+      JSP_VERSION = '2.1'
+      GEM_VERSION = '1'
 
-  VERSION = [ JETTY_VERSION, JSP_VERSION, GEM_VERSION ].join( '.' )
+      VERSION = [ JETTY_VERSION, JSP_VERSION, GEM_VERSION ].join( '.' )
 
-  JETTY_JSP_DIR = File.dirname( __FILE__ ) # :nodoc:
+      JETTY_JSP_DIR = File.dirname( __FILE__ ) # :nodoc:
+    end
+  end
 end
