@@ -2,7 +2,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>rjack</groupId>
-  <artifactId>jetty-jsp</artifactId>
+  <artifactId>rjack-jetty-jsp</artifactId>
   <packaging>pom</packaging>
   <version>1.0</version>
 
