@@ -1,4 +1,5 @@
 === 6.1.20.2.1.1 (TBD)
+* Rename gem rjack-jetty-jsp and as module RJack::Jetty::Jsp
 * Update to Jetty 6.1.20 JSP 2.1
 * Includes jsp-(api)-2.1-glassfish-9.1.1.B60.25.p2
 * Use rjack-tarpit for build.
